@@ -245,29 +245,27 @@ public class FetchOperator {
    **/
   public InspectableObject getNextRow() throws IOException {
     try {
-      if (currRecReader == null) {
-        currRecReader = getRecordReader();
-        if (currRecReader == null)
-          return null;
-      }
-
-      boolean ret = currRecReader.next(key, value);
-      if (ret) {
-        if (tblDataDone) {
-          Object obj = serde.deserialize(value);
-          return new InspectableObject(obj, serde.getObjectInspector());
-        } else {
-          rowWithPart[0] = serde.deserialize(value);
-          return new InspectableObject(rowWithPart, rowObjectInspector);
+      while (true) {
+        if (currRecReader == null) {
+          currRecReader = getRecordReader();
+          if (currRecReader == null) {
+            return null;
+          }
         }
-      } else {
-        currRecReader.close();
-        currRecReader = null;
-        currRecReader = getRecordReader();
-        if (currRecReader == null)
-          return null;
-        else
-          return getNextRow();
+  
+        boolean ret = currRecReader.next(key, value);
+        if (ret) {
+          if (tblDataDone) {
+            Object obj = serde.deserialize(value);
+            return new InspectableObject(obj, serde.getObjectInspector());
+          } else {
+            rowWithPart[0] = serde.deserialize(value);
+            return new InspectableObject(rowWithPart, rowObjectInspector);
+          }
+        } else {
+          currRecReader.close();
+          currRecReader = null;
+        }
       }
     } catch (Exception e) {
       throw new IOException(e);
