@@ -469,6 +469,9 @@ Release 0.5.0 -  Unreleased
     HIVE-898. Hive ODBC build fails on OSX.
     (Carl Steinbach and Ning Zhang via zshao)
 
+    HIVE-1141. Remove recursive call in FetchOperator.getNextRow.
+    (Zheng Shao via He Yongqiang)
+
 Release 0.4.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
